BUGFIX: Wrap text in tooltip in editform

--- a/Resources/Private/Styles/styles.scss
+++ b/Resources/Private/Styles/styles.scss
@@ -319,23 +319,24 @@ $datepicker__header-color: white;
             max-width: 50%;
         }
     }
-}
 
-.redirect-edit-form {
-    td {
-        padding: 1rem;
-        border-top: 0;
+    .redirect-edit-form {
+        td {
+            padding: 1rem;
+            border-top: 0;
+        }
     }
-}
 
-.redirect-tooltip {
-    position: absolute;
-    padding: 1rem;
-    background-color: #3f3f3f;
-    z-index: 1;
-    max-width: 300px;
-    margin-left: 1rem;
-    box-shadow: 0 1px 3px 5px rgba(0, 0, 0, .15);
+    .redirect-tooltip {
+        position: absolute;
+        padding: 1rem;
+        background-color: #3f3f3f;
+        z-index: 1;
+        margin-left: 1rem;
+        max-width: 300px;
+        white-space: normal;
+        box-shadow: 0 1px 3px 5px rgba(0, 0, 0, .15);
+    }
 }
 
 .neos-notification-content {
